preparing project for testing
