# router/config_routes.go
@@ -5,6 +5,7 @@ import (
 	"github.com/chryscloud/go-microkit-plugins/endpoints"
 	jwtModels "github.com/chryscloud/go-microkit-plugins/models/jwt"
 	"github.com/dgrijalva/jwt-go"
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	"github.com/mailio/mailio-nft-server/api"
 	"github.com/mailio/mailio-nft-server/config"
@@ -17,11 +18,22 @@ func ConfigAPI(router *gin.Engine, env *model.Environment, conf *config.Config) 
 	// initialize services
 	nftCatalogService := service.NewNftCatalog(env)
 	userService := service.NewUserService(env)
+	nftClaimService := service.NewNftClaimService(env)
+	nftImageService := service.NewNftImagesService(env)
 
 	// intialize API endpoints
-	mailioUserStatsApi := api.NewMailioUserStatsAPI()
 	nftCatalogApi := api.NewNftCatalogAPI(nftCatalogService)
 	userApi := api.NewUserAPI(userService)
+	nftImageApi := api.NewNftImagesAPI(nftImageService)
+	claimApi := api.NewClaimAPI(nftClaimService, nftCatalogService)
+
+	// enable cors
+	router.Use(cors.New(cors.Config{
+		AllowCredentials: true,
+		AllowOrigins:     []string{"*"},
+		AllowMethods:     []string{"*"},
+		AllowHeaders:     []string{"*"},
+	}))
 
 	// the default ping endpoint (sometimes needed for healthchecks in kubernetes environments)
 	root := router.Group("/")
@@ -32,10 +44,12 @@ func ConfigAPI(router *gin.Engine, env *model.Environment, conf *config.Config) 
 	// public APIs
 	public := router.Group("/api/v1")
 	{
-		public.GET("/user/:mailioaddress/stats", mailioUserStatsApi.GetMailioUserStats)
 		public.GET("/catalog/:id", nftCatalogApi.GetCatalog)
 		public.GET("/catalog", nftCatalogApi.ListCatalogs)
 		public.POST("/login", userApi.Login)
+		public.GET("/claim/:address/payload/:catalogId", claimApi.SigningPayload)
+		public.POST("/claim", claimApi.MintClaim)
+		public.GET("/user/claims/:walletaddress", claimApi.ListClaimsByUser)
 	}
 
 	// init JWT Authentication Middleware for private endpoints
@@ -49,6 +63,11 @@ func ConfigAPI(router *gin.Engine, env *model.Environment, conf *config.Config) 
 	{
 		private.POST("/catalog", nftCatalogApi.PutCatalog)
 		private.PUT("/catalog", nftCatalogApi.PutCatalog)
+		private.GET("/bridge/balance", claimApi.GetBridgeBalance)
+		private.POST("/nftimage/upload", nftImageApi.Upload)
+		private.GET("/nftimage/list", nftImageApi.List)
+		private.DELETE("/nftimage/:hash", nftImageApi.RemovePin)
+		private.GET("/claim", claimApi.ListClaims)
 	}
 	return router
 }
